# fdintercept

./: .mdformat.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
scripts/: Dockerfile  cargo-features-wrapper.sh  coverage.sh
src/: fd.rs  main.rs  process.rs  settings.rs  signals.rs  threads.rs
tests/: child_process.rs  integration_test.rs
