[package]
name = "fdintercept"
version = "0.1.0"
edition = "2024"
description = "Intercepts and logs stdin, stdout, and stderr for any target command."
authors = ["João Sampaio"]

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive"] }
mio = { version = "1.0.3", features = ["os-poll", "os-ext"] }
nix = { version = "0.29.0", features = ["process", "signal"] }
non-empty-string = "0.2.6"
nonempty = "0.11.0"
serde = { version = "1.0.219", features = ["derive"] }
shlex = "1.3.0"
signal-hook = "0.3.17"
toml = "0.8.20"
wait-timeout = "0.2.1"
