[package]
name = "fdintercept"
version = "0.1.0"
edition = "2024"
description = "Intercepts and logs stdin, stdout, and stderr for any target command."
authors = ["João Sampaio"]
license = "MIT"
repository = "https://github.com/jpmelos/fdintercept"
keywords = ["cli", "io", "intercept", "logging", "stdio"]
categories = [
  "command-line-utilities",
  "development-tools",
  "development-tools::debugging",
]

[lints.rust]
warnings = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
manual-string-new = "allow"
option-if-let-else = "allow"
too-many-lines = "allow"
needless-pass-by-value = "allow"
multiple-crate-versions = "allow"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.36", features = ["derive"] }
mio = { version = "1.0.3", features = ["os-poll", "os-ext"] }
nix = { version = "0.29.0", features = ["fs", "process", "signal"] }
non-empty-string = "0.2.6"
nonempty = "0.11.0"
serde = { version = "1.0.219", features = ["derive"] }
shlex = "1.3.0"
signal-hook = "0.3.17"
toml = "0.8.20"
wait-timeout = "0.2.1"

[dev-dependencies]
temp-env = "0.3.6"
tempfile = "3.19.1"
