[package]
name = "fdintercept"
version = "0.2.0-dev"
edition = "2024"
description = "Intercepts and logs stdin, stdout, and stderr for any target command."
authors = ["João Sampaio <jpmelos@gmail.com>"]
license = "MIT"
homepage = "https://github.com/jpmelos/fdintercept"
repository = "https://github.com/jpmelos/fdintercept"
keywords = ["cli", "io", "intercept", "logging", "stdio"]
categories = [
  "command-line-utilities",
  "development-tools",
  "development-tools::debugging",
]
include = ["Cargo.lock", "Cargo.toml", "LICENSE", "README.md", "src/*"]

[[bin]]
name = "fdintercept"
path = "src/main.rs"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
manual-string-new = "allow"
option-if-let-else = "allow"
too-many-lines = "allow"
needless-pass-by-value = "allow"
multiple-crate-versions = "allow"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = [
  "color",
  "derive",
  "help",
  "std",
  "usage",
], default-features = false }
mio = { version = "1.0.3", features = ["os-ext"] }
nix = { version = "0.30.1", features = ["fs", "signal"] }
non-empty-string = "0.2.6"
nonempty = "0.11.0"
serde = { version = "1.0.219", features = ["derive"] }
shlex = "1.3.0"
signal-hook = "0.3.18"
toml = "0.8.22"
wait-timeout = "0.2.1"

[dev-dependencies]
temp-env = "0.3.6"
tempfile = "3.20.0"
